tdf#136667 DOCX import: fix crash of floating tables

with tracked changes of table structure (not only cell
text content), where text ranges of redlines aren't
connected to a cell. Support also different table names
of redline text ranges for sure.

Regression from commit 288db6eb47fbbd2b3ca34ffea0686d8ed8ed9be9
(tdf#132271 DOCX: import change tracking in floating tables).

Change-Id: I58b1b21c8016d682a292409165991dec2f8cfa3d