writerfilter/source/dmapper/PropertyMap.cxx
@@ -1380,52 +1380,57 @@ void SectionPropertyMap::CloseSectionGroup( DomainMapper_Impl& rDM_Impl )
                 // convert redline ranges to cursor movement and character length
                 std::vector<sal_Int32> redPos, redLen;
                 std::vector<OUString> redCell;
-                OUString sTableName;
+                std::vector<OUString> redTable;
                 for( size_t i = 0; i < aFramedRedlines.size(); i+=3)
                 {
                     uno::Reference<text::XText> xCell;
                     uno::Reference< text::XTextRange > xRange;
                     aFramedRedlines[i] >>= xRange;
                     uno::Reference< beans::XPropertySet > xRangeProperties;
+                    OUString sTableName;
+                    OUString sCellName;
                     if ( xRange.is() )
                     {
                         xRangeProperties.set( xRange, uno::UNO_QUERY_THROW );
-
-                        const uno::Sequence<beans::Property> aRangeProperties
-                            = xRangeProperties->getPropertySetInfo()->getProperties();
-
-                        for (const beans::Property& rProperty : aRangeProperties)
+                        if (xRangeProperties->getPropertySetInfo()->hasPropertyByName("TextTable"))
                         {
-                            const OUString& rKey = rProperty.Name;
-                            uno::Any aValue = xRangeProperties->getPropertyValue(rKey);
-                            if ( rKey == "TextTable" )
+                            uno::Any aTable = xRangeProperties->getPropertyValue("TextTable");
+                            if ( aTable != uno::Any() )
                             {
                                 uno::Reference<text::XTextTable> xTable;
-                                aValue >>= xTable;
+                                aTable >>= xTable;
                                 uno::Reference<beans::XPropertySet> xTableProperties(xTable, uno::UNO_QUERY);
                                 xTableProperties->getPropertyValue("TableName") >>= sTableName;
                             }
-                            else if ( rKey == "Cell" )
+                            if (xRangeProperties->getPropertySetInfo()->hasPropertyByName("Cell"))
                             {
-                                 OUString sCellName;
-                                 aValue >>= xCell;
-                                 uno::Reference<beans::XPropertySet> xCellProperties(xCell, uno::UNO_QUERY);
-                                 xCellProperties->getPropertyValue("CellName") >>= sCellName;
-                                 redCell.push_back(sCellName);
+                                uno::Any aCell = xRangeProperties->getPropertyValue("Cell");
+                                if ( aCell != uno::Any() )
+                                {
+                                    aCell >>= xCell;
+                                    uno::Reference<beans::XPropertySet> xCellProperties(xCell, uno::UNO_QUERY);
+                                    xCellProperties->getPropertyValue("CellName") >>= sCellName;
+                                }
                             }
                         }
-
-                        uno::Reference<text::XTextCursor> xRangeCursor = xCell->createTextCursorByRange( xRange );
-                        if ( xRangeCursor.is() )
+                        redTable.push_back(sTableName);
+                        redCell.push_back(sCellName);
+                        bool bOk = false;
+                        if (!sTableName.isEmpty() && !sCellName.isEmpty())
                         {
-                            sal_Int32 nLen = xRange->getString().getLength();
-                            redLen.push_back(nLen);
-                            xRangeCursor->gotoStart(true);
-                            redPos.push_back(xRangeCursor->getString().getLength() - nLen);
+                            uno::Reference<text::XTextCursor> xRangeCursor = xCell->createTextCursorByRange( xRange );
+                            if ( xRangeCursor.is() )
+                            {
+                                bOk = true;
+                                sal_Int32 nLen = xRange->getString().getLength();
+                                redLen.push_back(nLen);
+                                xRangeCursor->gotoStart(true);
+                                redPos.push_back(xRangeCursor->getString().getLength() - nLen);
+                            }
                         }
-                        else
+                        if (!bOk)
                         {
-                            // failed createTextCursorByRange()
+                            // missing cell or failed createTextCursorByRange()
                             redLen.push_back(-1);
                             redPos.push_back(-1);
                         }
@@ -1437,7 +1442,6 @@ void SectionPropertyMap::CloseSectionGroup( DomainMapper_Impl& rDM_Impl )
 
                 uno::Reference<text::XTextTablesSupplier> xTextDocument(rDM_Impl.GetTextDocument(), uno::UNO_QUERY);
                 uno::Reference<container::XNameAccess> xTables = xTextDocument->getTextTables();
-                uno::Reference<text::XTextTable> xTable(xTables->getByName(sTableName), uno::UNO_QUERY);
                 for( size_t i = 0; i < aFramedRedlines.size(); i+=3)
                 {
                     OUString sType;
@@ -1447,6 +1451,7 @@ void SectionPropertyMap::CloseSectionGroup( DomainMapper_Impl& rDM_Impl )
                         continue;
                     aFramedRedlines[i+1] >>= sType;
                     aFramedRedlines[i+2] >>= aRedlineProperties;
+                    uno::Reference<text::XTextTable> xTable(xTables->getByName(redTable[i/3]), uno::UNO_QUERY);
                     uno::Reference<text::XText> xCell(xTable->getCellByName(redCell[i/3]), uno::UNO_QUERY);
                     uno::Reference<text::XTextCursor> xCrsr = xCell->createTextCursor();
                     xCrsr->goRight(redPos[i/3], false);
